--- a/blog/templates/components/commons/footer.html
+++ b/blog/templates/components/commons/footer.html
@@ -1,7 +1,7 @@
 {%load static %}
 
 {% block content%}
-<footer class="bg-[#F6F2E6] bg-cover flex-col align-bottom mt-4 h-auto">
+<footer class="bg-[#F6F2E6] bg-cover flex-col align-bottom pt-10 h-auto">
     <div class="container mx-auto px-4">
         <div class="flex flex-wrap justify-between">
             <div class="w-full lg:w-1/3 xl:w-1/3 p-2">
@@ -21,8 +21,8 @@
             </div>
             <div class="w-full lg:w-1/3 xl:w-1/3 p-2">
                 <h5 class="text-lg text-[#203329] font-libertinus-bold mb-4">CONTACTO</h5>
-                <p class="text-[#445e35] font-libertinus-bold">Correo electrónico: <a href="mailto:info@example.com" class="text-[#445e35] text-lg font-libertinus-regular hover:text-gray-900 hover:text-xl transition duration-300">info@example.com</a></p>
-                <a href="{% url 'about_us' %}" class="text-lg text-[#203329] font-libertinus-bold mt-4">ACERCA DE NOSOTROS</a>
+                <p class="text-[#445e35] font-libertinus-bold mb-5">Correo electrónico: <a href="mailto:info@example.com" class="text-[#445e35] text-lg font-libertinus-regular hover:text-gray-900 hover:text-xl transition duration-300">info@example.com</a></p>
+                <a href="{% url 'about_us' %}" class="text-lg text-[#203329] font-libertinus-bold py-8">ACERCA DE NOSOTROS</a>
             </div>
         </div>
         <div class="text-center mt-6">
