--- a/blog/templates/user/user_profile.html
+++ b/blog/templates/user/user_profile.html
@@ -6,9 +6,9 @@ Perfil de {{ user.username }}
 {% endblock title %}
 
 {% block content %}
-<section class="min-h-screen bg-[#F6F2E6] text-[#3F4F36] flex flex-row gap-10 justify-center items-center py-12 px-4">
+<section class="min-h-screen bg-white border-y border-slate-400 text-[#3F4F36] flex flex-row gap-10 justify-center items-center py-12 px-4">
 
-  <div class="bg-white rounded-lg shadow-md max-w-lg w-full p-6 space-y-6">
+  <div class="bg-[#F6F2E6] border border-slate-400 rounded-lg shadow-md max-w-lg w-full p-6 space-y-6">
 
     <h2 class="text-2xl font-semibold border-b border-[#3F4F36] pb-2 mb-4">
       Perfil de Usuario
@@ -44,7 +44,7 @@ Perfil de {{ user.username }}
     </div>
   </div>
   
-  <div class="bg-white rounded-lg shadow-md max-w-lg w-full p-6 space-y-6">
+  <div class="bg-[#F6F2E6] border border-slate-400 rounded-lg shadow-md max-w-lg w-full p-6 space-y-6">
     <h2 class="text-2xl font-semibold border-b border-[#3F4F36] pb-2 mb-4">Mis Posts</h2>
 
     {% if posts %}
