--- a/blog/templates/post/post_detail.html
+++ b/blog/templates/post/post_detail.html
@@ -8,7 +8,7 @@
         <h1 class="text-4xl font-bold mb-4">{{ object.title }}</h1>
 
         <p class="text-sm text-gray-500 mb-6 flex items-center gap-2">
-            Publicado el {{ object.created_at|date:"d M Y" }} por 
+            Publicado el {{ object.created_at|date:"d M Y" }} por
             {% if object.author.avatar %}
                 <img src="{{ object.author.avatar.url }}" alt="{{ object.author.username }}" class="w-6 h-6 rounded-full object-cover">
             {% else %}
@@ -44,7 +44,7 @@
         </p>
 
         <!-- Botones de acción -->
-        {% if user == object.author or user.is_collaborator or user.is_admin  %}
+        {% if user == object.author or user.is_collaborator or user.is_admin or user.is_superuser %}
             <div class="flex flex-wrap gap-3 mt-6 justify-start sm:justify-end">
                 <a href="{% url 'post:post_update' slug=object.slug %}" class="inline-flex items-center gap-2 bg-[#3F4F36] hover:bg-[#2f3c28] text-white font-semibold py-2 px-4 rounded-md transition duration-200">
                     ✏️ Editar
@@ -109,7 +109,7 @@
                     <p class="text-gray-800 mt-1 whitespace-pre-wrap">{{ comment.content|linebreaks }}</p>
                     <p class="text-xs text-gray-500 mt-2">{{ comment.created_at|timesince }} ago</p>
 
-                  
+
                         <div class="mt-3 space-x-4">
                         <button class="like-button text-sm text-gray-600 hover:text-green-600 items-center gap-1"
                                 data-comment-id="{{ comment.id }}"
@@ -126,7 +126,7 @@
                                 ✏️ Editar
                             </button>
                             {% endif %}
-                            {% if user == comment.author or user.is_admin or user.is_superuser %}                            
+                            {% if user == comment.author or user.is_admin or user.is_superuser %}
                             <form method="post"
                                 action="{% url 'comments:comment_delete' pk=comment.id %}"
                                 style="display: inline;"
